assets/css/custom.css
/* Custom API layout CSS */
.api-left-header {
  max-height: 60px;
  display: flex;
  flex-wrap: wrap;
  width: 229px;
  background-color: #f5f6fa;
  border-bottom: 1px solid #dedede;
  position: absolute;
  top: 0;
  left: 0;
  padding: 0.5rem 2rem;
}

.api-site-title {
  color: #27262b;
}

.api-right-header {
  display: flex;
  justify-content: flex-end;
  height: 60px;
  padding: 0;
  border-bottom: 1px solid #dedede;
  margin-left: 229px;
}

.api-main-content {
  padding: 0;
  margin: 0;
  max-width: 100%;
}

#api-main-content {
  height: 100%;
}

#api-main-content iframe {
  position: fixed;
  height: 100%;
  border: none;
  top: 0;
  margin-top: 60px;
}

.api-page-header {
  background-color: #f5f6fa;
}
@media (min-width: 46.25rem) {
  .api-page-header {
    background-color: #fff;
  }
}
.api-page-header .main-content {
  padding-top: 0;
}
@media (min-width: 46.25rem) {
  .api-page-header .main-content {
    display: flex;
    justify-content: flex-end;
    height: 60px;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.api-links {
  display: block;
  position: relative;
  flex-grow: 0;
  padding: 1rem;
  margin-bottom: 0;
  background-color: transparent;
  box-shadow: none;
  border-right: none;
}

.api-links-end {
  flex-grow: 1;
  border-right: none;
  text-align: right;
}

.api-links select {
  font-size: 14px;
}

.api-links li {
  margin: 0 0.25rem 0 0;
}

.api-links-double {
  padding: 0.25rem 0.5rem;
}

.api-links-label {
  padding: 0.5rem;
  text-align: center;
  background: #f5f6fa;
}

.api-links-label.orange {
  color: #ffb500;
  background: #f5f6fa;
  border-right: 1px solid #ffb500;
}

.api-links-label.blue {
  color: #36c9dd;
  background: #f5f6fa;
  border-right: 1px solid #36c9dd;
}

.api-links-label.dark-purple {
  color: #7400ff;
  background: #f5f6fa;
  border-right: 1px solid #7400ff;
}

/* Font Colors */
.font-orange {
  color: #ffb500;
}

.font-blue {
  color: #36c9dd;
}

.font-dark-purple {
  color: #7400ff;
}

/* Help section */
.footer-help-section {
  display: flex;
  justify-content: left;
  align-items: left;
  padding: 10px 0;
}

.footer-help-box {
  padding: 0px 30px;
  text-align: center;
}

.footer-help-box-image img {
  min-height: 82px;
  align-items: center;
  justify-content: center;
  max-height: 82px;
}

.footer-help-box p {
  font-size: 14px;
  display: block;
  padding: 10px 0 0 0;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 0.1em;
}

/* JTD Overrides */
.page-content {
  max-width: 1000px !important;
}

